# rust-ss3

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.config/: nextest.toml
downloads/sub-dir/: sub-file.txt
src/: consts.rs  error.rs  main.rs  prelude.rs  prompt.rs  spath.rs
src/_test_support/: mod.rs
src/_tests/: test-cp-upload.rs
src/cmd/: app.rs  mod.rs
src/s3w/: bucket_ops.rs  clean.rs  cp.rs  cp_download.rs  cp_upload.rs  cred.rs  get.rs  list.rs  list_buckets.rs  mod.rs  rm.rs  s3_bucket.rs  sbucket.rs  sitem.rs  support.rs
src/utils/: md5.rs
tests/: test-clean.rs  test-cp-download.rs  test-cp-upload.rs  test-ls.rs  test-mb.rs  test-rb.rs  test-rm.rs
tests-data/fixtures/fixture-01/: some-text.txt
tests-data/fixtures/fixture-01/sub-dir/: sub-file-01.txt  sub-file-02.txt
tests/utils/: exec.rs  mod.rs
