[package]
name = "ss3"
version = "0.2.0-rc.2-WIP"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Yet another S3 command line utilities... but env driven, per bucket."
categories = ["command-line-utilities"]
keywords = [
	"cli",
	"aws",
	"s3",
	"cloud"
]
homepage = "https://github.com/jeremychone/rust-ss3"
repository = "https://github.com/jeremychone/rust-ss3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
# -- CLI
clap =  {version = "4", features = ["cargo"]}
# -- File libs
pathdiff = "0.2"
walkdir = "2"
mime_guess = "2"
file-size = "1"
simple-fs = "0.9"
# -- Aws
aws-config = "1.4"
aws-runtime = "1.2"
aws-sdk-s3 = "1.28"
aws-smithy-http = "0.62"
aws-types = "1.2"
md5 = "0.8" # for aws etag
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
regex = "1"
globset = "0.4"
http = "1.1"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
# serial_test = "1" # Not used anymore
